--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "scripts": {
-    "dev": "npx tailwindcss -i ./css/input.css -o ./css/style.css --watch"
+    "dev": "run-p dev:*",
+    "dev:css": "tailwindcss -i ./css/input.css -o ./css/style.css --watch --quiet",
+    "dev:serve": "browser-sync start --no-notify --no-open --server --files '**/*.{html,css,js}'"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3"
