--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "dev": "run-p dev:*",
     "dev:css": "tailwindcss -i ./css/input.css -o ./css/style.css --watch --quiet",
-    "dev:serve": "browser-sync start --no-notify --no-open --server --files '**/*.{html,css,js}'"
+    "dev:serve": "browser-sync start --no-notify --no-open --server --files '**/*.{html,css,js}'",
+    "build": "tailwindcss -i ./css/input.css -o ./css/style.css --minify"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
