--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "browser-sync": "^2.29.3"
   }
 }
